@@ -1,3 +1,11 @@
+ukui-bluetooth (1.0.0-1kylin1k40) v101; urgency=medium
+
+  * bug  : 
+  * task :
+  * other: 调整托盘菜单的样式
+
+ -- guang tang <tangguang@kylinos.cn>  Fri, 23 Apr 2021 19:44:04 +0800
+
 ukui-bluetooth (1.0.0-1kylin1k39) v101; urgency=medium
 
   * Fixed : bug#48323
